# ag-ir-voc-ontology

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ag_voc.owl  export_owl.py  pyproject.toml
ag_voc/: __init__.py  abc.py  haplotypes.py  loci.py  vgsc.py
